[package]
name = "sfu"
version = "0.1.0"
edition = "2021"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.12.1"
bevy_editor_pls = { version = "0.6.0", optional = true }
leafwing-input-manager = "0.11.2"
rand = "0.8.5"

[features]
editor = ["bevy_editor_pls"]
